# epigram1

./: .gitignore  INSTALL  README.md  epigram  epigram.bat  epigram.el  epigram1.cabal  findbinary.bat
examples/: Bounded.epi  DecEqNat.epi  DecEqType.epi  Eval.epi  Lam.epi  PlusComm.epi  TakeWhile.epi
libs/: Bool.epi  Color.epi  Eq.epi  EqNat.epi  Fin.epi  FinEq.epi  List.epi  Nat.epi  So.epi  Tree.epi  UniqList.epi  Vec.epi  index.html
src/: .cvsignore  Boole.hi  Boole.lhs  Box.lhs  Category.hi  Category.lhs  Compute.lhs  Concrete.lhs  Doc.lhs  EditDoc.lhs  Elab.lhs  Emacs.lhs  Equality.lhs  Ewam.lhs  Gadgets.lhs  Igor.lhs  Interact.lhs  Logic.hi  Logic.lhs  Main.lhs  Makefile  Monadics.hi  Monadics.lhs  Name.hi  Name.lhs  ObjKind.hi  ObjKind.lhs  Parser.lhs  Term.hi  Term.lhs  Unify.lhs  Update.lhs  Utils.hi  Utils.lhs  Zip.hi  Zip.lhs  edit-epigram  emacs-epigram-interpreted.el  emacs-epigram.el  emacs-epigram.elc  (+5 more)
