name:                epigram1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/david-christiansen/epigram1#readme
-- license:             
-- license-file:        
-- author:              
maintainer:          David Christiansen <david@davidchristiansen.dk>
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable Epigram-bin
  hs-source-dirs:      src
  main-is:             Main.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array >= 0.5 && < 0.6
  other-modules:       Boole
                     , Box
                     , Category
                     , Compute
                     , Concrete
                     , Doc
                     , EditDoc
                     , Elab
                     , Emacs
                     , Equality
                     , Ewam
                     , Gadgets
                     , Igor
                     , Interact
                     , Logic
                     , Monadics
                     , Name
                     , ObjKind
                     , Parser
                     , Term
                     , Unify
                     , Update
                     , Utils
                     , Zip
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , IncoherentInstances
                     , MultiParamTypeClasses
                     , NPlusKPatterns
                     , RankNTypes
                     , ScopedTypeVariables
                     , UndecidableInstances
                     , TypeOperators

-- test-suite epigram1-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , epigram1
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/david-christiansen/epigram1
